backend_main_django/.deploy/dev/yc-sirius/edu-naughty-pike/django-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django
  namespace: edu-naughty-pike
spec:
  containers:
  - name: django
    image: django_app:test
    ports:
    - containerPort: 80
    volumeMounts:
    - name: pg-root-cert
      mountPath: /etc/postgresql/certs
      readOnly: true
  volumes:
  - name: pg-root-cert
    secret:
      secretName: pg-root-cert
