backend_main_django/.deploy/dev/yc-sirius/edu-naughty-pike/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: edu-naughty-pike
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30321
  type: NodePort
