backend_main_django/.deploy/dev/yc-sirius/edu-naughty-pike/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: edu-naughty-pike
spec:
  rules:
  - host: edu-naughty-pike.sirius-k8s.dvmn.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
